--- a/app/src/main/res/drawable/circle_solid_background_classic.xml
+++ b/app/src/main/res/drawable/circle_solid_background_classic.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <solid
-        android:color="#990000"/>
+        android:color="@color/segmentoPorquinhoClassic"/>
 
     <size
         android:width="130dp"
